Truncates feed, adds fade to bottom of feed, and fixes bug with adding lines

--- a/src/frontend/components/Interface/styles.scss
+++ b/src/frontend/components/Interface/styles.scss
@@ -4,7 +4,18 @@
   .areas {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    // justify-content: space-between;
+
+    .area {
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+    .area:first-child {
+      padding-left: 0px;
+    }
+    .area:last-child {
+      padding-right: 0px;
+    }
   }
 
   .area-unselected:hover {
