--- a/src/frontend/styles.scss
+++ b/src/frontend/styles.scss
@@ -40,3 +40,14 @@ body {
     opacity: 1;
   }
 }
+
+/* https://stackoverflow.com/questions/22666063/how-to-fade-the-edge-of-a-div-with-just-css */
+.fade {
+    position: relative;
+    bottom: 4em;
+    height: 4em;
+    background: -webkit-linear-gradient(
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 1) 100%
+    );
+}
